@startuml

title __ACTIVATION's Class Diagram__\n

  package neuralNetwork.function.activation {
    interface ActivationFunction {
        {abstract} + calculateOutput()
        {abstract} + calculateDerivative()
    }
  }
  

  package neuralNetwork.function.activation {
    class IdentityActivation {
        + calculateDerivative()
        + calculateOutput()
    }
  }
  

  package neuralNetwork.function.activation {
    class SigmoidActivation {
        + SigmoidActivation()
        + calculateOutput()
        + calculateDerivative()
    }
  }
  

  IdentityActivation -up-|> ActivationFunction
  SigmoidActivation -up-|> ActivationFunction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
